--- a/scripts/hc-country.html
+++ b/scripts/hc-country.html
@@ -1661,7 +1661,7 @@ library(dendextend)
 library(factoextra)
 
 # read data
-countries &lt;- read.csv(&quot;data/Country-data.csv&quot;)
+countries &lt;- read.csv(&quot;../data/country-data.csv&quot;)
 
 df &lt;- countries %&gt;%
   column_to_rownames(var = &quot;country&quot;)</code></pre>
