--- a/README.html
+++ b/README.html
@@ -366,7 +366,7 @@ pre code {
 
 
 <div id="vignette-clustering-methods" class="section level1">
-<h1>Vignette-clustering-methods</h1>
+<h1>vignette-clustering-methods</h1>
 <p>Vignette on implementing clustering methods (hierarchical,
 model-based, density-based) using unlabeled country data; created as a
 class project for PSTAT197A in Fall 2022.</p>
@@ -427,7 +427,7 @@ us:</p>
 <li><p>Data set</p>
 <ul>
 <li><a href="https://www.kaggle.com/datasets/rohan0301/unsupervised-learning-on-country-data">[Data]
-“Unsupervised Learning on Country Data”</a></li>
+“Unsupervised Learning on Country Data | Kaggle”</a></li>
 </ul></li>
 <li><p>Hierarchical clustering</p>
 <ul>
